# rajk-appman

./: MANIFEST.in  README.md  pyproject.toml  setup.py  tasks.py
docs_config/: current_release.rst
rajk_appman/: admin.py  apps.py  invoke_rajk.py  invoke_utils.py  models.py  urls.py  views.py
rajk_appman/migrations/: 0001_initial.py
rajk_appman/templates/: base.html
rajk_appman/templates/rajk-appman/: home.html  user_page.html
rajk_appman/templates/registration/: login.html
